--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "1.1.1",
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.10.0",
+    "rollup-plugin-css-only": "^4.5.2",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "rollup-plugin-svelte": "^7.1.5",
+    "svelte": "^4.0.0"
   },
   "dependencies": {
     "sirv-cli": "^0.4.4"
